--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <p class="event received">Device is Ready</p>
         </div>
     </div>
+	<!-- window.open(‘http://example.com’, ‘_blank’, ‘location=no’); -->
+	<a href="#" onclick="window.open('https://www.google.com/', '_system', 'location=no');" >Google</a>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
