--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
+	<script>
+		// document.addEventListener("deviceready", onDeviceReady, false); 
+		function onDeviceReady() {
+			// Now safe to use the Codova API
+			window.location="http://www.mayoclinic.org/"; }
+	</script>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Hello World</title>
 </head>
@@ -49,7 +55,8 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
         </div>
-		<a href="#" onclick="window.open('https://www.google.com/', '_system', 'location=no');" >Google</a>
+		<a href="#" onclick="window.open('https://www.google.com/', '_system', 'location=no,toolbar=no');" >Google</a> |
+		<a onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a>
     </div>
 	<!-- window.open(‘http://example.com’, ‘_blank’, ‘location=no’); -->
 	
