--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <p class="event received">Device is Ready</p>
 			<span id="deviceInfo">Device info...</span>
         </div>
-		<a href="#" onclick="window.open('https://www.google.com/', '_system', 'location=no,toolbar=no');" >Google</a> |
-		<a onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a>
+		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
+		<a href="#" onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a>
     </div>
 	<!-- window.open(‘http://example.com’, ‘_blank’, ‘location=no’); -->
 	
