--- a/index.html
+++ b/index.html
@@ -38,26 +38,24 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
-	<script>
-		// document.addEventListener("deviceready", onDeviceReady, false); 
-		function onDeviceReady() {
-			// Now safe to use the Codova API
-			window.location="http://www.mayoclinic.org/"; }
-	</script>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Hello World</title>
 </head>
 
 <body>
     <div class="app">
-        <h1>PhoneGap cli-6.5.0</h1>
+        <h1>PhoneGap<br>cli-6.5.0</h1>
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
+			<br>
 			<span id="deviceInfo">Device info...</span>
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
-		<a href="#" onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a>
+		<a href="#" onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a> |
+		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', 'location=no,toolbar=no');" >CFI White Board 1</a> |
+		<a href="#" onclick="launchCFIWhiteboard(''https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard/');" >CFI White Board 2</a>
+		
     </div>
 	<!-- window.open(‘http://example.com’, ‘_blank’, ‘location=no’); -->
 	
