--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
 			<br>
-			<span id="deviceInfo">Device info...</span>
-			<span id="urlInfo">Device info...</span>
+			<span id="deviceInfo">Device info...</span><br>
+			<span id="urlInfo">url info...</span>
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
 		<a href="#" onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a> |
 		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', 'location=no,toolbar=no');" >CFI White Board 1</a> |
-		<a href="#" onclick="buildCFIWhiteboardURL('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard/');" >CFI White Board 2</a>
+		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard/');" >CFI White Board 2</a>
 		
     </div>
 	<!-- window.open(‘http://example.com’, ‘_blank’, ‘location=no’); -->
