--- a/index.html
+++ b/index.html
@@ -1,24 +1,5 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2016 Adobe Systems Incorporated. All rights reserved.
 
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 
 <head>
@@ -28,18 +9,8 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <!-- Good default declaration:
-    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-        * Enable inline JS: add 'unsafe-inline' to default-src
-        * Enable eval(): add 'unsafe-eval' to default-src
-    * Create your own at http://cspisawesome.com
-    -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
-
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>Hello World</title>
+    <title>CFI White Board</title>
 </head>
 
 <body>
@@ -49,17 +20,14 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
 			<br>
-			<span id="deviceInfo">Device info...</span><br>
+			<span id="deviceInfo">device info...</span><br>
 			<span id="urlInfo">url info...</span>
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
-		<a href="#" onclick="navigator.app.loadUrl('https://cnn.com/', { openExternal:true });">cnn</a> |
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', 'location=no,toolbar=no');" >CFI White Board 1</a> |
-		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard/');" >CFI White Board 2</a>
+		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard/');" >CFI White Board</a>
 		
     </div>
-	<!-- window.open(‘http://example.com’, ‘_blank’, ‘location=no’); -->
-	
+
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
