--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
 			<br>
-			<span id="deviceInfo">device info...</span><br>
-			<span id="urlInfo">url info...</span>
+			<span id="deviceInfo">device info...</span><br><br>
+			<span id="urlInfo">url info...</span><br><br>
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
 		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard/');" >CFI White Board</a>
