--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
 		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');" >CFI White Board</a> |
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board2</a>
+		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board 2</a> |
+		<a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 3</a>
 		
     </div>
 
-    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
