--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
 		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');" >CFI White Board</a> |
 		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board 2</a> |
-		<a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 3</a>
+		<!-- <a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 3</a> -->
 		
     </div>
 
