--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
 		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');" >CFI White Board</a><br>
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board 2</a><br>
+		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board 2 - in app browser</a><br>
 		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_system', '');" >CFI White Board 3 - system</a><br>
+		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_system','location=no,toolbar=no');" >CFI White Board 4 - system - location no</a><br>
 		<a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 4</a>
 		
     </div>
