--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<span id="deviceInfo">device info...</span><br><br>
 			<span id="urlInfo">url info...</span><br><br>
         </div>
-		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a> |
+		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a><br><br>
 		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');" >CFI White Board</a><br>
 		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board 2 - in app browser</a><br>
 		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', 'location=no,toolbar=no');" >CFI White Board 3 - in app browser - no location</a><br>
