--- a/index.html
+++ b/index.html
@@ -25,16 +25,10 @@
         </div>
 		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a><br><br>
 		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');" >CFI White Board</a><br>
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', '');" >CFI White Board 2 - in app browser</a><br>
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_blank', 'location=no,toolbar=no');" >CFI White Board 3 - in app browser - no location</a><br>
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_self', 'location=no,toolbar=no');" >CFI White Board 4 - self</a><br>
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_system', '');" >CFI White Board 5 - system</a><br>
-		<a href="#" onclick="window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_system','location=no,toolbar=no');" >CFI White Board 6 - system - location no</a><br>
-		<a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 7</a>
+		<!-- <a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 2</a> -->
 		
     </div>
 
-    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
