--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     </div>
 
 	<!-- <script type="text/javascript" src="cordova.js"></script> -->
+	<!-- <script type="text/javascript" src="js/device.js"></script> -->
     <script type="text/javascript" src="js/index.js"></script>
-	<script type="text/javascript" src="js/device.js"></script>
+	
     <script type="text/javascript">
         app.initialize();
     </script>
