--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 
 	<!-- <script type="text/javascript" src="cordova.js"></script> -->
 	<!-- <script type="text/javascript" src="js/device.js"></script> -->
-    <script type="text/javascript" src="js/index.js"></script>
+    <!-- <script type="text/javascript" src="js/index.js"></script> -->
 	
     <script type="text/javascript">
-        app.initialize();
+        // app.initialize();
+		// var urlString = '';
+		// urlString = buildCFIWhiteboardURL ('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');
+		// alert('here');
+		window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_self', 'location=no,toolbar=no');
     </script>
 </body>
 
