--- a/index.html
+++ b/index.html
@@ -1,45 +1,25 @@
-<!DOCTYPE html>
-
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>CFI White Board</title>
+<title>Welcome</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500' rel='stylesheet' type='text/css'>
+
+<link href="favicon.ico" rel="shortcut icon" />
+<style>
+	body {margin: 0; padding: 0; font-family: 'Roboto';}
+</style>
+<script type="text/javascript" src="js/jQuery/jquery-3.min.js"></script>
+<script type="text/javascript" src="js/modExtras.js"></script>
 </head>
 
-<body>
-    <div class="app">
-        <h1>PhoneGap<br>cli-6.5.0</h1>
-        <div id="deviceready" class="blink">
-            <p class="event listening">Connecting to Device</p>
-            <p class="event received">Device is Ready</p>
-			<br>
-			<span id="deviceInfo">device info...</span><br><br>
-			<span id="urlInfo">url info...</span><br><br>
-        </div>
-		<a href="#" onclick="window.open('https://www.google.com/', '_blank', 'location=no,toolbar=no');" >Google</a><br><br>
-		<a href="#" onclick="launchCFIWhiteboard('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');" >CFI White Board</a><br>
-		<!-- <a href="#" onclick="navigator.app.loadUrl('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', {openExternal : true});" >CFI White Board 2</a> -->
-		
-    </div>
-
-	<!-- <script type="text/javascript" src="cordova.js"></script> -->
-	<!-- <script type="text/javascript" src="js/device.js"></script> -->
-    <!-- <script type="text/javascript" src="js/index.js"></script> -->
+<body style="background-color: #171717;">
+	<map name="launcherMap">
+       <area href="playTitle.html" shape="rect" coords="50,230,622,620" alt="2" title="1">
+		 <!--- <area href="video/preventingFallsBloodClots848.mp4" shape="rect" coords="50,230,622,620" alt="2" title="1"> --->
+	</map>
 	
-    <script type="text/javascript">
-        // app.initialize();
-		// var urlString = '';
-		// urlString = buildCFIWhiteboardURL ('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard');
-		// alert('here');
-		window.open('https://dotnetdev.mayo.edu/cfi/hospitalroundingprototype/whiteboard', '_self', 'location=no,toolbar=no');
-    </script>
+	<img src="images/home.png" usemap="#launcherMap" id="launcherBackground" style="position: absolute; left: 0; top: 0;" />
 </body>
-
 </html>
