--- a/playTitle.html
+++ b/playTitle.html
@@ -28,13 +28,13 @@
 
 <!--
 <iframe id="kaltura_player" src="http://www.kaltura.com/p/1601341/sp/160134100/embedIframeJs/uiconf_id/38987051/partner_id/1601341?iframeembed=true&playerId=kaltura_player&flashvars[referenceId]=VID-20116145" width="1800" height="905" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"></iframe>
--->
+
 <video width="1900" height="1000" autoplay>
 	<source src="platform/android/res/raw/preventingFalls640.mp4" type="video/mp4">
 	Your browser does not support the video tag.
-</video>
-<!-- 
+</video>-->
+ 
 <video id="splashvideo" autobuffer controls="false"></video>
--->
+
 </BODY>
 </html>
