--- a/playTitle.html
+++ b/playTitle.html
@@ -24,7 +24,7 @@
     }
 </script>
 </HEAD>
-<BODY onload="onLoad()">
+<BODY>
 
 <!--
 <iframe id="kaltura_player" src="http://www.kaltura.com/p/1601341/sp/160134100/embedIframeJs/uiconf_id/38987051/partner_id/1601341?iframeembed=true&playerId=kaltura_player&flashvars[referenceId]=VID-20116145" width="1800" height="905" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"></iframe>
