--- a/playTitle.html
+++ b/playTitle.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<script type="text/javascript" src="js/cordova.js"></script>
+<script type="text/javascript" src="cordova.js"></script>
 <script>
 
 	function isPhoneGap() {
