--- a/playTitle.html
+++ b/playTitle.html
@@ -1,29 +1,9 @@
 <HTML>
 <HEAD>
-<script type="text/javascript" src="cordova.js"></script>
-<script>
-
-	function isPhoneGap() {
-		if (document.location.protocol == 'file:') { return true } else { return false };
-	}
-	
-    // Wait for device API libraries to load
-    //
-    function onLoad() {
-        document.addEventListener("deviceready", onDeviceReady, false);
-    }
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-        window.plugins.html5Video.initialize({
-            "splashvideo" : "preventingFalls640.mp4"
-        })
-        window.plugins.html5Video.play("splashvideo");
-    }
-</script>
+<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+<script type="text/javascript" charset="utf-8" src="video.js"></script
 </HEAD>
-<BODY>
+<BODY onload="onLoad()">
 
 <!--
 <iframe id="kaltura_player" src="http://www.kaltura.com/p/1601341/sp/160134100/embedIframeJs/uiconf_id/38987051/partner_id/1601341?iframeembed=true&playerId=kaltura_player&flashvars[referenceId]=VID-20116145" width="1800" height="905" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"></iframe>
@@ -31,15 +11,10 @@
 <video width="1900" height="1000" autoplay>
 	<source src="platform/android/res/raw/preventingFalls640.mp4" type="video/mp4">
 	Your browser does not support the video tag.
-</video>
+</video>-->
  
-<video id="splashvideo" autobuffer controls="false"></video>
--->
 <script>
-var videoUrl = 'platform/android/res/raw/preventingFalls640.mp4';
-
-// Just play a video
-window.plugins.streamingMedia.playVideo(videoUrl);
+window.plugins.videoPlayer.play("file:///platform/android/res/raw/preventingFalls640.mp4");
 </script>
 
 </BODY>
