--- a/playTitle.html
+++ b/playTitle.html
@@ -20,6 +20,6 @@
 </script>
 </HEAD>
 <BODY onload="onLoad()">
-<video id="splashvideo" loop></video>
+<video id="splashvideo" width="1900" height="1000" autoplay></video>
 </BODY>
 </html>
