--- a/playTitle.html
+++ b/playTitle.html
@@ -1,25 +1,11 @@
 <HTML>
 <HEAD>
 <script type="text/javascript" src="cordova.js"></script>
-<script>
-	
-    // Wait for device API libraries to load
-    //
-    function onLoad() {
-        document.addEventListener("deviceready", onDeviceReady, false);
-    }
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-        window.plugins.html5Video.initialize({
-            "splashvideo" : "preventingFalls640.mp4"
-        })
-        window.plugins.html5Video.play("splashvideo");
-    }
-</script>
+<script type="text/javascript" charset="utf-8" src="video.js"></script>
 </HEAD>
-<BODY onload="onLoad()">
-<video id="splashvideo" width="1900" height="1000" autoplay></video>
+<BODY>
+<script>
+VideoPlayer.play("file:///platforms/android/res/raw/preventingFalls640.mp4");
+</script>
 </BODY>
 </html>
