--- a/playTitle.html
+++ b/playTitle.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" charset="utf-8" src="video.js"></script>
+<script type="text/javascript" charset="utf-8" src="videoPlayer.js"></script>
 </HEAD>
 <BODY>
 <script>
